# elk

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE.md  LM_output.ipynb  MANIFEST.in  README.md  as_cycles.sh  as_experiment.sh  cc_data.ipynb  comp.py  config.yaml  cycles_delete_as_cache.sh  delete_as_cache.sh  delete_as_cache2.sh  elk.code-workspace  elk_elicit_tasks_18897824.out  elk_elicit_tasks_arithmetic18897987.out  elk_imdb_mispellings-rerun18912529.out  elk_imdb_mispellings-rerun18913972.out  elk_imdb_mispellings-rerun18916269.out  elk_imdb_mispellings-rerun18918532.out  elk_imdb_mispellings-rerun318916311.out  elk_script.sh  evaluate.py  evaluate.sh  extraction_main.py  filtering.ipynb  generate.sh  generate_filtered_results.py  generation_main.py  imdb_experiment.sh  llama_decapoda_output.ipynb  llama_device_map.py  llama_fsdp.py  llama_inference_speed.py  llama_overwrite.py  main.py  mypy.ini  prob_dist.ipynb  (+14 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cpu_ci.yml
counterfact/test/: data-00000-of-00001.arrow  state.json
counterfact/train/: dataset_info.json  state.json
elk/: __init__.py  __main__.py  argparsers.py  calibration.py  concept_erasure.py  confusion_prefixes.json  credences.json  debug_logging.py  default_config.json  eigsh.py  evaluate.py  example.py  extract.sh  extraction_main.py  files.py  generate.sh  generation_main.py  list.py  logging.py  main.py  math.py  math_util.py  metrics.py  multiprocessing.py  original_runs.py  parallelization.py  parsing.py  prompts.json  registration.json  run.py  train.py  train_evaluate.sh  truncated_eigh.py  utils.py  visual.ipynb  visual_llama.ipynb
elk/eval/: parser.py  utils_evaluation.py
elk/evaluate/: evaluate.py  parser.py  sweep-default.yml
elk/evaluation/: __init__.py  evaluate.py  evaluate_log.py  gather.py
elk/extensions/additional_plots/: figure1_generalization.py
elk/extensions/recursive_ccs/: parser.py  rccs.py  train.py
elk/extraction/: __init__.py  balanced_sampler.py  caching.py  construct_prompts.py  dataset_name.py  dataset_preprocessing.py  extraction.py  extraction_main.py  gather.py  generator.py  inference_server.py  load_utils.py  misleading_prefixes.yaml  neel.py  parser.py  prompt_collator.py  prompt_dataset.py  prompt_loading.py  save_utils.py
elk/extraction/llama/: device_configs.py  device_map.py
elk/inference_server/: fsdp.py  fsdp_options.py
elk/metrics/: __init__.py  accuracy.py  calibration.py  eval.py  roc_auc.py
elk/plotting/: command.py  utils.py  visualize.py
elk/promptsource/: __init__.py  templates.py
elk/promptsource/templates/_default/: templates.yaml
elk/promptsource/templates/_no_suffix/: templates.yaml
elk/promptsource/templates/ag_news/: templates.yaml
elk/resources/: adjectives.json  config.json  names.json  nouns.json
elk/results/: LM_output.ipynb  arith_test_results.ipynb  arith_test_similarity.ipynb  imdb_similarity.ipynb  imdb_test_results.ipynb  pickle.ipynb  plot_config.py
elk/rnn/: elmo.py  testing.ipynb  tf_elmo.ipynb
elk/rwkv-lm/: rwkv_hf.py  test_rwkv.ipynb
elk/rwkv_lm/: rwkv_hf.py  rwkv_hiddens.py  test_rwkv.ipynb  test_rwkv_hf.ipynb  test_rwkv_hiddens.ipynb
elk/tests/: test_extraction_output.py
elk/tests/evaluation/: test_eval_parser.py
elk/tests/extraction/: test_gen_parser.py
elk/tests/utils_evaluation/: test_eval_parser.py  test_parser.py
elk/tests/utils_generation/: test_gen_parser.py
elk/trained/: ccs_model.pt
elk/training/: __init__.py  baseline.py  burns_norm.py  ccs.py  ccs_reporter.py  classifier.py  common.py  concept_eraser.py  eigen_reporter.py  lda.py  lda_reporter.py  linear_reporter.py  losses.py  mlp_reporter.py  multi_reporter.py  normalizer.py  parser.py  platt_scaling.py  preprocessing.py  reporter.py  spectral_norm.py  supervised.py  sweep.py  train.py  train_log.py  train_result.py
elk/utils/: __init__.py  concurrency_utils.py  constants.py  csv.py  data_utils.py  distributed.py  fsdp.py  gpu_utils.py  hf_utils.py  llama.py  llama_utils.py  math_util.py  multi_gpu.py  multiprocessing_utils.py  pretty.py  tree_utils.py  types.py  typing.py  visualize.py
elk/utils_evaluation/: ccs.py  parser.py  probes.py  utils_evaluation.py
elk/utils_extraction/: func_utils.py  load_utils.py  method_utils.py  plot_utils.py
elk/utils_generation/: construct_prompts.py  generation.py  load_utils.py  parser.py  save_utils.py
joss/: paper.bib  paper.md
notebooks/: dataset_promptsourece_exploration.ipynb
tests/: dbpedia_prompts.yaml  distilgpt2_boolq_cfg.yaml  distilgpt2_copa_cfg.yaml  distilgpt2_dbpedia_cfg.yaml  super_glue_prompts.yaml  test_burns_norm.py  test_classifier.py  test_concept_eraser.py  test_convert_span.py  test_eigen_reporter.py  test_eigsh.py  test_elicit_extract.py  test_encodings.py  test_extract_cache.py  test_extract_ids.py  test_extraction_output.py  test_find_git_hash.py  test_gather.py  test_gpu_example.py  test_inference_server.py  test_load_prompts.py  test_log_csv_elements.py  test_math.py  test_metrics.py  test_prompt_dataset.py  test_pytree.py  test_roc_auc.py  test_samplers.py  test_smoke_elicit.py  test_smoke_eval.py  test_spectral_norm.py  test_split_devices.py  test_truncated_eigh.py  test_viz.py  test_write_iterator_to_file.py
tests/extraction/: test_gen_parser.py
utils_evaluation/: ccs.py  parser.py  utils_evaluation.py
utils_extraction/: ccs.py  func_utils.py  load_utils.py  method_utils.py  parser.py  plot_utils.py  save_utils.py
utils_generation/: construct_prompts.py  generation.py  load_utils.py  parser.py  save_utils.py
waree_results/: LM_output.ipynb  arith_test_results.ipynb  arith_test_similarity.ipynb  imdb_arith_results.ipynb  imdb_test_results.ipynb  similarity_between_datasets.ipynb
waree_results/arithmetic_imdb_normal_prompts/: process_data_normal_prompts.ipynb
waree_results/arithmetic_long_prompts/: process_data_long_prompts.ipynb
(+93 files in other folders)
