[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "eleuther-elk"
description = "Keeping language models honest by directly eliciting knowledge encoded in their activations"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["nlp", "interpretability", "language-models", "explainable-ai"]
license = {text = "MIT License"}
dependencies = [
    # Added Dataset.from_generator() method
    "datasets>=2.5.0",
    # TODO: consider removing this dependency since we only use it once
    "einops",
    # Introduced numpy.typing module
    "numpy>=1.20.0",
    # This version is old, but it's needed for certain HF tokenizers to work.
    "protobuf==3.20.*",
    # Basically any version should work as long as it supports the user's CUDA version
    "pynvml",
    # Doesn't really matter but before 1.0.0 there might be weird breaking changes
    "scikit-learn>=1.0.0",
    # Needed for certain HF tokenizers
    "sentencepiece==0.1.97",
    # We upstreamed bugfixes for Literal types in 0.1.1
    "simple-parsing>=0.1.1",
    # Version 1.11 introduced Fully Sharded Data Parallel, which we plan to use soon
    "torch>=1.11.0",
    # Doesn't really matter but versions < 4.0 are very very old (pre-2016)
    "tqdm>=4.0.0",
    # 4.0 introduced the breaking change of using return_dict=True by default
    "transformers>=4.0.0",
    # required by promptsource, which doesn't specify a version
    "jinja2"
]
version = "0.1.1"

[project.optional-dependencies]
dev = [
    "hypothesis",
    "pre-commit",
    "pytest",
    "pyright"
]

[project.scripts]
elk = "elk.__main__:run"

[tool.pyright]
include = ["elk*"]
reportPrivateImportUsage = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["elk*"]
